# school_ops_sv

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 113e87aef32d_seed_default_data.py  334b10a3d68a_initial_schema.py  add_color_to_task_categories.py  add_evo_points_gamification.py  add_evo_points_to_recurring_templates.py  add_exam_date_to_unique_constraint.py  add_fee_permissions.py  add_menu_screens_feature.py  add_oauth_support.py  add_project_deleted_audit_action.py  add_recurring_task_permission.py  add_recurring_tasks_support.py  add_task_view_styles.py  fix_missing_menu_allocations.py  link_orphaned_permissions.py  remove_menu_icon_name.py
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  scheduler.py  security.py
app/middleware/: logging.py  project_status.py
app/models/: __init__.py  attendance.py  audit.py  base.py  evo_point.py  exam.py  menu_screen.py  notification.py  oauth.py  project.py  rbac.py  student.py  task.py  task_view.py  upload.py  user.py
app/schemas/: attendance.py  audit.py  auth.py  common.py  dashboard.py  evo_point.py  exam.py  menu_screen.py  notification.py  oauth.py  project.py  rbac.py  recurring_task.py  student.py  task.py  task_view.py  upload.py
app/services/: attendance.py  audit.py  auth.py  dashboard.py  evo_point.py  exam.py  menu_screen.py  notification.py  (+8 more)
scripts/: check_enum.py  fix_transaction_enum.py
(+16 files in other folders)
